# raco

./: .gitignore  Cargo.toml  README.md  cobertura.xml  justfile  plan.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
crates/mcp-agent-rs/: Cargo.toml
crates/mcp-agent-rs/src/: lib.rs  prelude.rs  transport.rs
crates/raco-cli/: Cargo.toml
crates/raco-cli/src/: main.rs
crates/raco-core/src/: config.rs  error.rs  lib.rs  utils.rs
crates/raco-mcp/: Cargo.toml
crates/raco-mcp/src/: client.rs  lib.rs  protocol.rs
crates/raco-servers/: Cargo.toml
crates/raco-servers/src/: filesystem.rs  lib.rs  process.rs  registry.rs
crates/raco-web/: Cargo.toml
crates/raco-web/src/: main.rs
crates/raco-workflow/: Cargo.toml
crates/raco-workflow/src/: engine.rs  lib.rs  steps.rs
docs/: requirements.txt
docs/source/: architecture.rst  changelog.md  conf.py  index.rst  project.md  requirements.rst  rust-migration.md
docs/source/_needs_templates/: arch_template.need  req_template.need  spec_template.need
docs/source/_static/: agent_patterns.puml  component_diagram.puml  core_communication_flow.puml  data_flow_architecture.puml  deployment_architecture.puml  error_handling.puml  event_driven_workflow.puml  extension_points.puml  human_input_workflow.puml  jsonrpc_communication.puml  module_dependencies.puml  raco_architecture.puml  raco_development_environment.puml  raco_human_loop.puml  raco_mcp_integration.puml  raco_workflow_system.puml  security_architecture.puml  terminal_io_flow.puml  terminal_system.puml  terminal_system_architecture.puml  workflow_execution.puml
docs/source/_static/css/: custom.css
docs/source/_templates/: layout.html
