[workspace]
resolver = "2"
members = [
    "crates/raco-core",
    "crates/raco-mcp",
    "crates/raco-workflow",
    "crates/raco-servers",
    "crates/raco-cli",
    "crates/raco-web",
    "crates/mcp-agent-rs",
]

[workspace.dependencies]
# MCP framework
mcp-agent-rs = { path = "crates/mcp-agent-rs", features = ["transport-stdio", "transport-websocket", "async-runtime", "json-protocol"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"

# Web framework
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Testing
tokio-test = "0.4"
rstest = "0.18"

# Documentation
cargo-sphinx = "1.0"

# Configuration
config = "0.13"
dotenvy = "0.15"

# Security
rustls = "0.21"
ed25519-dalek = "1.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
unwrap_used = "deny" 