[package]
name = "mcp-agent-rs"
version = "0.1.0"
edition = "2021"
description = "Stub implementation of the Model Context Protocol agent"
authors = ["RACO Contributors"]
license = "MIT OR Apache-2.0"

[features]
transport-stdio = []
transport-websocket = []
async-runtime = []
json-protocol = []

[dependencies]
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] } 