[package]
name = "raco-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for RACO"
authors = ["RACO Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/avrabe/raco"
readme = "README.md"

[dependencies]
# Internal crates
raco-core = { path = "../raco-core" }
raco-mcp = { path = "../raco-mcp" }
raco-servers = { path = "../raco-servers" }
raco-workflow = { path = "../raco-workflow" }

# CLI
clap = { workspace = true }
colored = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rstest = { workspace = true } 