[package]
name = "raco-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP protocol implementation for RACO (Ralf's AI Code Orchestrator)"
authors = ["RACO Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/raco"
readme = "../../README.md"

[dependencies]
# Internal dependencies
raco-core = { path = "../raco-core" }

# MCP framework
mcp-agent-rs = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID generation for server IDs
uuid = { version = "1.4", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true } 