[package]
name = "raco-servers"
version = "0.1.0"
edition = "2021"
description = "MCP server implementations for RACO"
authors = ["RACO Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/avrabe/raco"
readme = "README.md"

[dependencies]
# Internal crates
raco-core = { path = "../raco-core" }
raco-mcp = { path = "../raco-mcp" }

# MCP framework
mcp-agent-rs = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# For UUIDs
uuid = { version = "1.3", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true } 